#AUTOMAKE_OPTIONS = ../util/ansi2knr no-dependencies
AUTOMAKE_OPTIONS = 
ETAGS_ARGS = $(srcdir)/Makefile.am
#EXTRA_DIST = TAGS

noinst_HEADERS = \
	app.h \
	assertions.h \
	boolean.h \
	buffer.h \
	dir.h \
	error.h \
	file.h \
	formatcheck.h \
	int.h \
	interfaceiter.h \
	ipv6.h \
	lang.h \
	lib.h \
	list.h \
	log.h \
	magic.h \
	md5.h \
	mem.h \
	msgcat.h \
	msgs.h \
	mutex.h \
	net.h \
	netaddr.h \
	netscope.h \
	offset.h \
	once.h \
	platform.h \
	print.h \
	result.h \
	region.h \
	sockaddr.h \
	stat.h \
	stdio.h \
	strerror.h \
	string.h \
	time.h \
	types.h \
	util.h
